--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
+<script src="C:\Users\Ago\Documents\GitHub\agolajko.github.io\javas.js"></script>
 <button onclick="openStuff();">Click here to go somewhere else!</button>
