--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<script src="C:\Users\Ago\Documents\GitHub\agolajko.github.io\javas.js"></script>
-<button onclick="openStuff();">Click here to go somewhere else!</button>
+
+
+<head>
+<button onclick="openStuff();">Click here to go somewhere else! </button>
+<script type= "text/javascript" src="C:\Users\Ago\Documents\GitHub\agolajko.github.io\javas.js"></script>
+</head>
