--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 
 <head>
 <button onclick="openStuff();">Click here to go somewhere else! </button>
-<script type= "text/javascript" src="C:\Users\Ago\Documents\GitHub\agolajko.github.io\javas.js"></script>
+<script type= "text/javascript" src="javas.js"></script>
 </head>
