--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 
 
 <head>
-<button onclick="openStuff();">Click here to go somewhere else! </button>
-<script type= "text/javascript" src="javas.js"></script>
+Hey there! We want to find out whether humans or computers are better at recognising real from AI generated poems. To do this we need your input, fellow human if you think the following poems are real or fake.
 </head>
+
+<body>
+<button onclick="openStuff();">Click her go to survey! </button>
+<script type= "text/javascript" src="javas.js"></script>
+</body>
