--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 Hey there! We want to find out whether humans or computers are better at recognising real from AI generated poems. To do this we need your input, fellow human if you think the following poems are real or fake.
 </head>
 
+<section>
 <body>
-<button onclick="openStuff();">Click her go to survey! </button>
+<button onclick="openStuff();">Click her go to the survey! </button>
 <script type= "text/javascript" src="javas.js"></script>
 </body>
+</section>
