--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 
 
 <head>
-Hey there! We want to find out whether humans or computers are better at recognising real from AI generated poems. To do this we need your input, fellow human if you think the following poems are real or fake.
+Shakespeare or Fakespeare
 </head>
+
+<br>
 
 <section>
 <body>
-<button onclick="openStuff();">Click her go to the survey! </button>
+Hey there! We want to find out whether humans or computers are better at recognising real from AI generated poems. To do this we need your input, fellow human if you think the following poems are real or fake.
+</body>
+</section>
+
+<br>
+
+<section>
+<body>
+<button onclick="openStuff();">Click here go to the survey! </button>
 <script type= "text/javascript" src="javas.js"></script>
 </body>
 </section>
