--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 <head>
-	
+	<title>Shakespeare or Fakespeare</title>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
