--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Hi Fellow Human! We want to find out how good Computers are at writing poems. We
 
 <section>
 <body>
-//<button onclick="openStuff();">Click here go to the survey! </button>
+<!-- <button onclick="openStuff();">Click here go to the survey! </button> -->
 <a href="something" class="button1">Button</a>
 <script type= "text/javascript" src="javas.js"></script>
 </body>
