--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ Hi Fellow Human! We want to find out how good Computers are at writing poems. We
 
 <section>
 
-<!-- <button onclick="openStuff();">Click here go to the survey! </button> -->
-<a onclick="openStuff();" class="button1">Open questionare</a>
+<button onclick="openStuff();">Click here go to the survey! </button>
+<!--<a onclick="openStuff();" class="button1">Open questionare</a> -->
 <script type= "text/javascript" src="javas.js"></script>
 
 </section>
