--- a/index.html
+++ b/index.html
@@ -35,5 +35,4 @@ We want to find out how AI generated poems compare to real poems. Are you able t
 <!--<a onclick="openStuff();" class="button1">Open questionare</a> -->
 <script type= "text/javascript" src="javas.js"></script>
 
-</section>
--->
+</section>-->
