updated personal site

--- a/blog.html
+++ b/blog.html
@@ -4,25 +4,28 @@
 
 <head>
 	<title>Ago</title>
-	<link rel="stylesheet" href="styles2.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
 </head>
 
 <body style="margin-left:18%;margin-right:18%">
 
-<h1 style="margin-bottom:10px; font-size:36px"; font>Ago Lajko</h1>
+<h1 >Ago Lajko</h1>
 
-<a href="test_site.html" style="text-decoration:none">
-	<h2 style="margin-right:10px; display:inline-block; font-size:25px" >About</h2>
+<a href="index.html">
+	<h2 >About</h2>
 </a>
 
-<a href="blog.html" style="text-decoration:Bold" class="inactiveLink">
-	<h2 style="margin-right:10px; display: inline-block;font-size:25px" >Blog</h2>
+<a href="blog.html" class="inactiveLink">
+	<h2 >Blog</h2>
 </a>
 
 <br/>
+
 I might write here
 
+<br/>
 </html>
