--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h1 >Ago Lajko</h1>
 
-<a href="test_site.html"class="inactiveLink">
+<a href="index.html"class="inactiveLink">
 	<h2 >About</h2>
 </a>
 
