--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div>
 <div>
-<img class="test" src="ago_lajko_profile.jpg" height="20%"/>
+<img class="test" src="ago_lajko_profile.jpg"/>
 </div>
 <br/>
 <div>
