updated personal site 4

--- a/404.html
+++ b/404.html
@@ -26,10 +26,10 @@
 
 <div>
 <div>
-<img class="test" src="woman_shrug.png"/>
+<img class="test" src="woman_shrug.jpg"/>
 </div>
 
-<h2>404 You are lost</h2>
+<h2>404 Hmm, we are lost!</h2>
 
 <br/>
 </html>
