updated personal site4

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 <img class="test" src="woman_shrug.jpg"/>
 </div>
 
-<h2>404 Hmm, we are lost!</h2>
-
+<h2>404 <br/> It seems to me that you have lost something <br/>I would like to help you find it</h2>
+<!-- BLOOD. Kendrick Lamar -->
 <br/>
 </html>
