--- a/404.html
+++ b/404.html
@@ -26,10 +26,12 @@
 
 <div>
 <div>
-<img class="test" src="woman_shrug.jpg"/>
+<img class="test" src="woman_shrug.jpg" alt="woman shrugging"/>
 </div>
 
 <h2>404 <br/> It seems to me that you have lost something <br/>I would like to help you find it</h2>
 <!-- BLOOD. Kendrick Lamar -->
+
+
 <br/>
 </html>
