added latex test blog

--- a/404.html
+++ b/404.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
+
+
 <html>
-
-
 
 <head>
 	<title>Ago</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="UTF-8">  <!--to support emojis -->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!--import favicon -->
 
 
 </head>
@@ -23,13 +25,16 @@
 	<h2 >Blog</h2>
 </a>
 
-
 <div>
-<div>
-<img class="test" src="woman_shrug.jpg" alt="woman shrugging"/>
+<p class="shrug" >🤷‍♀️</p>
 </div>
 
-<h2>404 <br/> It seems to me that you have lost something <br/>I would like to help you find it</h2>
+<p>404
+	<br/>
+	It seems to me that you have lost something
+	<br/>
+	I would like to help you find it
+</p>
 <!-- BLOOD. Kendrick Lamar -->
 
 
