--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
+
+
 <html>
-
-
 
 <head>
 	<title>Ago</title>
@@ -26,6 +27,10 @@
 <br/>
 
 I might write here
-
+<br/>
+<br>
+<div>
+<a href="latex_test.html"> How does Latex work?</a>
+</div>
 <br/>
 </html>
