--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
+<!DOCTYPE html>
+
 <html>
-
-
-
 <head>
 	<title>Ago</title>
 	<link rel="stylesheet" href="style.css">
@@ -11,7 +10,7 @@
 
 </head>
 
-<body style="margin-left:18%;margin-right:18%">
+<body>
 
 <h1 >Ago Lajko</h1>
 
@@ -48,7 +47,7 @@ My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
 
 <script>
 	var alt_num = Math.floor(Math.random() * 2500) + 1;
-	var alt_link = "https://xkcd.com/"+ alt_num.toString()
+	var alt_link = "https://xkcd.com/"+ al	t_num.toString()
 	document.getElementById("profile").title = alt_link
 </script>
 
