added better mobile support

--- a/blog.html
+++ b/blog.html
@@ -32,5 +32,6 @@ I might write here,  until then here is a test:
 <div>
 <a href="latex_test.html"> How does Latex work?</a>
 </div>
-<br/>
+
+</body>
 </html>
