--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve.
+There is one easter egg, however not on this page. -->
+
 
 </head>
 
@@ -18,7 +21,7 @@
 	<h2 >About</h2>
 </a>
 
-<a href="blog.html" >
+<a href="blog.html" title="Where I write">
 	<h2 >Blog</h2>
 </a>
 
@@ -29,7 +32,7 @@
 </div>
 <br/>
 <div>
-<p>I am completing my masters in ML and Computational Neuroscience at <a href="http://ucl.ac.uk">UCL<a/>.
+<p>I am completing my masters in ML and Computational Neuroscience at <a href="https://ucl.ac.uk">UCL<a/>.
 	<br/>
 	My advisor is <a href="https://www.gatsby.ucl.ac.uk/~pel/">PEL</a> and I am working on stochastic neural nets.
 </p>
@@ -39,7 +42,7 @@
 
 <br/>
 
-<a href="http://www.twitter.com/agolajko"> Twitter</a>
+<a href="https://www.twitter.com/agolajko"> Twitter</a>
 
 <br/>
 
@@ -51,6 +54,5 @@ My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
 	document.getElementById("profile").title = alt_link
 </script>
 
-
-<br/>
+</body>
 </html>
