--- a/latex_test.html
+++ b/latex_test.html
@@ -28,9 +28,9 @@
 </a>
 
 <p class="blog">
-  Hi 🤷‍♀️ there I wonder how this works and whether it supports MathJax so that I can
-  write \(\LaTeX\). Would be great. Also, how are line breaks made in here.
-  I know if I break <br> a line
+  Hi 🤷‍♀️ there I wonder how this works and whether it supports
+	MathJax so I can write \(\LaTeX\). Would be great.
+	Also, how do I insert a line break. I know if I break < br> <br> a line
   the line will break but how about end of lines etc. Ok this looks pretty good actually.
   How do I make a pragraph
   <br>
@@ -41,11 +41,10 @@
   screen on mobile. Cool this works.
   <br>
   <br>
-  So this is a wholenew eqn:
+  So this is an eqn in a new line:
   $$ \int_{-\infty}^{\infty} dx e^{-\frac{(x-\mu)^2}{2\sigma^2}} $$
   and this is inline: \(\sigma \ne 0\)
 </p>
 
-
-<br/>
+</body>
 </html>
