added higher quality pic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ There is one easter egg, however not on this page. -->
 
 <div>
 <div>
-<img id="profile" class="test" src="ago_lajko_profile.jpg" alt="headshot of Ago" title=alt_link>
+<img id="profile" src="ago_profile.jpg" alt="ohoto" title=alt_link>
 </div>
 <br/>
 <div>
@@ -50,7 +50,7 @@ My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
 
 <script>
 	var alt_num = Math.floor(Math.random() * 2500) + 1;
-	var alt_link = "https://xkcd.com/"+ al	t_num.toString()
+	var alt_link = "https://xkcd.com/"+ alt_num.toString()
 	document.getElementById("profile").title = alt_link
 </script>
 
