made blog the homepage

--- a/index.html
+++ b/index.html
@@ -1,59 +1,37 @@
 <!DOCTYPE html>
 
+
 <html>
+
 <head>
 	<title>Ago</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="canonical" href="https://agolajko.com">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve.
-There is one easter egg, however not on this page. -->
 
 
 </head>
 
-<body>
+<body style="margin-left:18%;margin-right:18%">
 
 <h1 >Ago Lajko</h1>
 
-<a href="index.html"class="inactiveLink">
+<a href="about.html">
 	<h2 >About</h2>
 </a>
 
-<a href="blog.html" title="Where I write">
+<a href="/" class="inactiveLink">
 	<h2 >Blog</h2>
 </a>
 
+<br/>
 
+H there! This is my blog, so I might write here. Until then here is a test:
+<br/>
+<br>
 <div>
-<div>
-<img id="profile" src="ago_profile.jpg" alt="ohoto" title=alt_link>
+<a href="latex_test.html"> How do I Latex within HTML?</a>
 </div>
-<br/>
-<div>
-<p>I am completing my masters in ML and Computational Neuroscience at <a href="https://ucl.ac.uk">UCL<a/>.
-	<br/>
-	My advisor is <a href="https://www.gatsby.ucl.ac.uk/~pel/">PEL</a> and I am working on stochastic neural nets.
-</p>
-
-
-<a href="https://www.linkedin.com/in/ago-lajko/"> LinkedIn </a>
-
-<br/>
-
-<a href="https://www.twitter.com/agolajko"> Twitter</a>
-
-<br/>
-
-My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
-
-<script>
-	var alt_num = Math.floor(Math.random() * 2500) + 1;
-	var alt_link = "https://xkcd.com/"+ alt_num.toString()
-	document.getElementById("profile").title = alt_link
-</script>
 
 </body>
 </html>
