--- a/latex_test.html
+++ b/latex_test.html
@@ -19,11 +19,11 @@
 
 <h1 >Ago Lajko</h1>
 
-<a href="/">
+<a href="about.html">
 	<h2 >About</h2>
 </a>
 
-<a href="blog.html" >
+<a href="/" >
 	<h2 >Blog</h2>
 </a>
 
