made blog the homepage

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ There is one easter egg, however not on this page. -->
 
 </head>
 
-<body
+<body>
 
 <h1>Ago Lajko</h1>
 
@@ -22,7 +22,7 @@ There is one easter egg, however not on this page. -->
 	<h2 >About</h2>
 </a>
 
-<a href="/" title="Where I write">
+<a href="/">
 	<h2 >Blog</h2>
 </a>
 
