--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <html>
 
 <head>
-	<title>Ago</title>
+	<title>Blog</title>
 	<link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://agolajko.com/index.html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
@@ -31,6 +32,8 @@ H there! This is my blog, so I might write here. Until then here is a test:
 <br>
 <div>
 <a href="latex_test.html"> How do I Latex within HTML?</a>
+<br>
+<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
 </div>
 
 </body>
