--- a/latex_test.html
+++ b/latex_test.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Ago</title>
+	<title>Latex in HTML</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
@@ -45,6 +45,8 @@
   $$ \int_{-\infty}^{\infty} dx e^{-\frac{(x-\mu)^2}{2\sigma^2}} $$
   and this is inline: \(\sigma \ne 0\)
 </p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CbRsb0T7Oz8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
