moved around files

--- a/about.html
+++ b/about.html
@@ -16,18 +16,21 @@ There is one easter egg, however not on this page. -->
 
 <h1>Ago Lajko</h1>
 
-<a href="about.html"class="inactiveLink">
-	<h2 >About</h2>
-</a>
+<div class="">
+	<a href="about.html"class="inactiveLink">
+		<h2 >About</h2>
+	</a>
 
-<a href="/">
-	<h2 >Blog</h2>
-</a>
+	<a href="/">
+		<h2 >Blog</h2>
+	</a>
+</div>
+
 
 
 <div>
 <div>
-<img id="profile" src="ago_profile.jpg" alt="ohoto" title=alt_link>
+<img id="profile" src="img/ago_profile.jpg" alt="ohoto" title=alt_link>
 </div>
 <br/>
 <div>
