--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 
 <h1 >Ago Lajko</h1>
 
-<a href="about.html">
-	<h2 >About</h2>
-</a>
+<div class="">
 
-<a href="/" class="inactiveLink">
-	<h2 >Blog</h2>
-</a>
+	<a href="about.html">
+		<h2 >About</h2>
+	</a>
 
-<br/>
+	<a href="/" class="inactiveLink">
+		<h2 >Blog</h2>
+	</a>
 
-H there! This is my blog, so I might write here. Until then here is a test:
+</div>
+
+
+Hi there! This is my blog, so I might write here. Until then here is a test:
 <br/>
 <br>
 <div>
