--- a/latex_test.html
+++ b/latex_test.html
@@ -19,13 +19,17 @@
 
 <h1 >Ago Lajko</h1>
 
-<a href="about.html">
-	<h2 >About</h2>
-</a>
+<div class="">
 
-<a href="/" >
-	<h2 >Blog</h2>
-</a>
+	<a href="about.html">
+		<h2 >About</h2>
+	</a>
+
+	<a href="/" >
+		<h2 >Blog</h2>
+	</a>
+</div>
+
 
 <p class="blog">
   Hi 🤷‍♀️ there I wonder how this works and whether it supports
@@ -46,7 +50,6 @@
   and this is inline: \(\sigma \ne 0\)
 </p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/CbRsb0T7Oz8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
