--- a/404.html
+++ b/404.html
@@ -17,13 +17,17 @@
 
 <h1 >Ago Lajko</h1>
 
-<a href="about.html">
-	<h2 >About</h2>
-</a>
+<div class="">
 
-<a href="/" >
-	<h2 >Blog</h2>
-</a>
+	<a href="about.html">
+		<h2 >About</h2>
+	</a>
+
+	<a href="/" >
+		<h2 >Blog</h2>
+	</a>
+</div>
+
 
 <div>
 <p class="shrug" >🤷‍♀️</p>
