--- a/limits_light_microscopy.html
+++ b/limits_light_microscopy.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Latex in HTML</title>
+	<title>Limitations of light microscopy</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
@@ -40,7 +40,7 @@
 	Although cells, bacteria and some cell organelles can be resolved, proteins
 	and small molecules were outside the bounds of this technique. This has
 	overall greatly limited our microscopic methods.
-	It was Abbe in 1873 [link] who first noted the above limitation on
+	It was Abbe in 1873 who first noted the above limitation on
 	resolution and hence the underlying limit to light microscopy bears his name.
 
 </p>
@@ -52,13 +52,11 @@
 		ease of presentation. Imagine rays of light from a source travelling through
 		the specimen into the lens. For a given microscope set-up we are asking, what
 		the minimum distance between two points that can be seen through our
-		objective is. It simplifies our approach (without losing meaning) to think
-		of the above set-up as a light beam traveling through a slit (the sample).
-		Now the question becomes: how small is the smallest distance (\(d_{min}\)) between two
-		slits such that we can still tell them apart.
+		objective is.
+
 		In order for an image to be created by the light travelling through the lens,
 		at least two beams of light have to coincide (at the point of focus). A single
-		light beam is not enough to create a focused image. This is shown below.
+		light beam is not enough to create a focused image. This is shown in the Figure 1 below.
 		</p>
 
 		<div class="img_blog">
@@ -71,13 +69,20 @@
 		</div>
 
 		<p class="blog">
+		It simplifies our approach (without losing meaning) to think
+		of the above set-up as a light beam traveling through a slit (the sample).
+		Now the question becomes: how small is the smallest distance (\(d_{min}\)) between two
+		slits such that we can still tell them apart.
+
+		<br>
+
 
 		We will find \(d_{min}\) on the sample when one of the light rays
 		is hitting the edge of the lens. This will be the ray that for any two points
 		maximises the angle at which the rays arrive and hence minimises \(d_{min}\).
 		The below diagram details the case when a ray is hitting the edge of the lens.
 		Here a ray of light is built from multiple waves (\(l_1, l_2\)) arriving from
-		different slits. As these waves form a light beam and they are coherent.
+		different slits.
 
 
 		<div class="img_blog">
@@ -89,13 +94,15 @@
 		</div>
 
 <p class="blog">
-		This is the limiting case, and again the two waves (\(l_1, l_2\)) combined
+		This is the limiting case (as the ray is hitting the edge of the lense),
+		and the two waves (\(l_1, l_2\)) combined
 		will form a coherent light beam. Moreover this will be the first diffraction
 		maxima (if there was another diffraction maxima before this that would mean
 		we could make \(d_{min}\) even smaller until we find the first diffraction maxima just
 		hitting the edge of the lense). This means the difference in distances
 		travelled between the two waves will be \(\lambda\) as this is the first diffraction maxima.
-		We can see this in action in the picture and corresponding animation.
+		<br><br>
+		We can see this in action in the Fig.3 and corresponding animation Fig.4.
 		In the picture the slits are the wave sources. While the animation shows
 		the now combined waves forming diffraction maxima.
 
@@ -113,7 +120,7 @@
 	<div class="img_column">
 		<figure>
 			<img src="img/Doubleslit.gif" style="width:100%" alt="">
-			<figcaption>Fig.3: Slits create diffraction maxima</figcaption>
+			<figcaption>Fig.4: Slits create diffraction maxima</figcaption>
 		</figure>
 	</div>
 
@@ -121,12 +128,12 @@
 
 		<p class="blog">
 		We can now look at how this condition informs the resolving power. Let’s
-		look at Fig 1 geometrically. Fundamentally we want a geometrical connection
+		look back at Fig.2 geometrically. Fundamentally we want a geometrical connection
 		between the minimum distance,\(d_{min}\), and the other known properties
 		of the set-up, in order to put a lower bound on this distance.
 
 		With this we can derive the travel distance  between two waves forming the
-		first diffraction maxima : \(\Delta l = d \sin \theta \) (Due to the right
+		first diffraction maxima: \(\Delta l = d \sin \theta \) (Due to the right
 		angled triangle and \(\theta\)).
 		Further, as these waves are coherent the difference in distance travelled
 		will be \(\lambda\).
@@ -134,9 +141,11 @@
 		Now we know \(\Delta l = d \sin \theta = \lambda\) giving a relation between
 		\(\lambda\) wavelength and the angle \(\theta\).
 		This is the sort of connection between known quantities and \(d_{min}\) we
-		were looking for.There is one more thing to iron out before we arrive at
+		were looking for.
+		<br>
+		<br>
+		There is one more thing to iron out before we arrive at
 		Abbe’s formula.
-
 		In this case we are referring to the \(\lambda\) that is present between
 		the sample and the lens (this might not be the same wavelength as in normal
 		conditions). The new wavelength can be written as depending on the refractive
@@ -159,7 +168,7 @@
 		Now we can put this back into the first eqn to get the relation between
 		the wavelength of the outside medium to the angle within
 		\(\frac{\lambda_1}{n_2} =d \sin\theta \). <br>
-		And we arrive at \(d = \frac{\lambda_1}{n_2 \sin\theta}\)
+		And we arrive at \(d = \frac{\lambda_1}{n_2 \sin\theta}\).
 
 		<br>
 		<br>
@@ -169,12 +178,12 @@
 		\(\lambda_2\) the wavelength in vacuum
 		\(n_2\) refractive index of the material between the lens and the sample
 		\(\theta\) aperture of the lense
-		\(n\sin\theta\) is the numerical aperture
+		\(n\sin\theta\) is the numerical aperture.
 		<br>
 		<br>
 		Finally we have Abbe's limiting factor \(d = 0.61\frac{\lambda_1}{n_2 \sin \theta}\).
-		As we see above, this equation has described the fundamental limit to ligh
-		t microscopy that has been present ever since its invention. Abbe's limiting
+		As we see above, this equation has described the fundamental limit to light
+		microscopy that has been present ever since its invention. Abbe's limiting
 		factor is the closest there is to having a physical limit to light microscopy.
 		To put it simply it says the shorter the wavelength the better the resolution
 		of the microscope. This is why in the next section X-rays and electron microscopes
@@ -184,13 +193,13 @@
 		<div class="img_blog">
 		<figure>
 			<img src="img/airy_patterns.png" style="width:30%" alt="">
-			<figcaption>Fig.4: Sources that are resolved and not resolved</figcaption>
+			<figcaption>Fig.5: Sources that are resolved and not resolved</figcaption>
 		</figure>
 
 
 		</div>
 
-		Resolving power as overlapping distributions
+		<h4>Resolving power as overlapping distributions</h4>
 
 		<p class="blog">
 		As we can simply approximate the waves leaving a point as a Gaussian
@@ -199,9 +208,11 @@
 		sufficiently far from each other (outside the resolving power distance) the
 		distribution will be easy to tell apart.
 		So if we go above the resolving power of a microscope we will not be able
-		to differentiate between two points. In the above image the top two signals
+		to differentiate between two points. In Fig.5 the top two signals
 		are well resolved, while the one at the bottom is not. The lowermost signal
 		can be thought of as two Gaussians with very similar means.
+		And in Fig.6 and Fig.7 we see two signals that are not resolved well
+		and a signal that is well resolved represented as a dsitribution.
 
 		<div class="img_row">
 
@@ -210,7 +221,7 @@
 			<div class="img_column">
 				<figure>
 					<img src="img/two_normal.png" style="width:100%" alt="">
-					<figcaption>Fig.5: It is hard to tell if this is in fact one Gaussian badly resolved
+					<figcaption>Fig.6: It is hard to tell if this is in fact one Gaussian badly resolved
 					or two with near equal means (an unresolved image)</figcaption>
 				</figure>
 			</div>
@@ -218,7 +229,7 @@
 			<div class="img_column">
 				<figure>
 					<img src="img/normal.png" style="width:100%" alt="">
-					<figcaption>Fig.6: Clearly resolved signal with a maximum at the mean of the Gaussian
+					<figcaption>Fig.7: Clearly resolved signal with a maximum at the mean of the Gaussian
 					(a point where the resolving power is sufficiently high)</figcaption>
 				</figure>
 			</div>
@@ -231,19 +242,33 @@
 		As the resolving power of light microscopy has been fundamentally limited,
 		there have been various alternative ways of looking at small distances.
 </p>
-		X-ray crystallography
+
+<h4>Immersion microscopy</h4>
+<p class="blog">
+		This technique uses light microscopes with oil between the sample
+		and the objective. This gets around Abbe's limit by changing the refractive
+		index \(n_2\)  in the eqn \(d = 0.61\frac{\lambda_1}{n_2 \sin \theta}\).
+		If the refractive index is increased (and is above 1),
+		we can see the minimum distance between two points that can be resolved will decrease.
+		Oil has a refractive index of 1.515, hence a decreased minimum resolution
+		distance and increased power. However this will only have 1.515 higher
+		resolving power, leaving us still uncapable of looking at cell structure.
+
+</p>
+
+	<h4>X-ray crystallography</h4>
 		<p class="blog">
 
 		The electromagnetic waves are X-rays, meaning the small wavelength allows a
-		higher resolving power. However it relies on X-ray diffraction and Bragg’s
+		higher resolving power. However, it relies on X-ray diffraction and Bragg’s
 		law, so they can be only used on crystallised materials. Meaning living cells
 		and organisms can’t be used. This is a major limitation.
-		Nevertheless  X-ray crystallography was used in the experiments performed under
+		Nevertheless, X-ray crystallography was used in the experiments performed under
 		the supervision of Rosalind Franklin to image DNA, providing crucial evidence
 		for the helical structure of Watson and Crick’s model with the backbone being
 		on the outside.
 		</p>
-		Electron microscopy
+	<h4>Electron microscopy</h4>
 		<p class="blog">
 
 		Here electrons are used for reflecting off our sample, again these have a
@@ -255,17 +280,7 @@
 		need to be prepared. This often means freezing, coating in metal or chemical
 		fixation, all resulting in cell death.
 </p>
-	Immersion microscopy
-<p class="blog">
-		This technique uses light microscopes with oil between the sample
-		and the objective. This gets around Abbe's limit by changing the refractive
-		index \(n_2\)  in the eqn \(d = 0.61\frac{\lambda_1}{n_2 \sin \theta}\).
-		If the refractive index is increased (and is above 1),
-		we can see the minimum distance between two points that can be resolved will decrease.
-		Oil has a refractive index of 1.515, hence a decreased minimum resolution
-		distance and increased power.
 
-</p>
 
 <h3>Further resources</h3>
 
@@ -279,6 +294,9 @@ was more useful this time
 Abbe's paper</a>
 </li>
 
+
+<p class="thanks">Thanks to David Urban, Loren Kell and Kalman Lajko Reka Tron for reviewing this.
+</p>
 
 </body>
 </html>
