--- a/limits_light_microscopy.html
+++ b/limits_light_microscopy.html
@@ -287,7 +287,7 @@
 <li>Funny enough the
 <a href="https://hu.wikipedia.org/wiki/Felold%C3%A1si_hat%C3%A1r">
 Hungarian Wikipedia</a>
-was more useful this time
+was the most useful text for writing this
 </li>
 
 <li> <a href="http://publikationen.ub.uni-frankfurt.de/frontdoor/index/index/year/2009/docId/11525">
