--- a/limits_light_microscopy.html
+++ b/limits_light_microscopy.html
@@ -295,7 +295,7 @@ Abbe's paper</a>
 </li>
 
 
-<p class="thanks">Thanks to David Urban, Loren Kell and Kalman Lajko Reka Tron for reviewing this.
+<p class="thanks">Thanks to David Urban, Loren Kell, Kalman Lajko and Reka Tron for reviewing this.
 </p>
 
 </body>
