added dark theme

--- a/about.html
+++ b/about.html
@@ -2,17 +2,30 @@
 
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163112737-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-163112737-2');
+	</script>
+
+
 	<title>Ago</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="canonical" href="https://agolajko.com/about.html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<script src="dark.js"></script>
 
 <!-- Hey! Welcome here, enjoy reading this and lmk how I could improve.
 There is one easter egg, however not on this page. -->
 </head>
 
 <body>
+<button onclick="myFunction()">Dark</button>
 
 <h1>Ago Lajko</h1>
 
