--- a/limits_light_microscopy.html
+++ b/limits_light_microscopy.html
@@ -4,6 +4,16 @@
 <html>
 
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163112737-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-163112737-2');
+	</script>
+
 	<title>Limitations of light microscopy</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -12,10 +22,13 @@
   <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+	<script src="dark.js"></script>
+
 
 </head>
 
 <body>
+<button onclick="myFunction()">Dark</button>
 
 <div class="">
 	<h1 >Ago Lajko</h1>
