--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
 <html>
 
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163112737-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-163112737-2');
+	</script>
+
 	<title>Blog</title>
 	<link rel="stylesheet" href="style.css">
   <link rel="canonical" href="https://agolajko.com/index.html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<script src="dark.js"></script>
+
 
 
 </head>
 
 <body style="margin-left:18%;margin-right:18%">
+<button onclick="myFunction()">Dark</button>
 
 <h1 >Ago Lajko</h1>
 
