--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@ There is one easter egg, however not on this page. -->
 </div>
 <br/>
 <div>
-<p>I am completing my masters in ML and Computational Neuroscience at <a href="https://ucl.ac.uk">UCL<a/>.
+<p>I am completing my masters in ML and Computational Neuroscience at <a href="https://ucl.ac.uk">UCL</a>.
 	<br/>
-	My advisor is <a href="https://www.gatsby.ucl.ac.uk/~pel/">Peter Latham</a> and I am working on stochastic neural nets.
+	My advisor is <a href="https://www.gatsby.ucl.ac.uk/~pel/"> Peter Latham </a> and I am working on stochastic neural nets.
 </p>
 
 
