--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -44,5 +44,13 @@
 
 <h2>Graphs of cool long term trends</h2>
 
+This is a compilation of graphs that show interesting trends that <i>might</i> drive change in the future. Some of these trends have already borne fruit while others are much more probabilistic.
+
+
+<h3> Moore's law </h3>
+<img> src="/img/graphs/image3" </img>
+From: <a href="https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.323.9505&rep=rep1&type=pdf">Implications of Historical Trends in the Electrical Efficiency of
+Computing</a>
+
 </body>
 </html>
