--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -48,9 +48,13 @@ This is a compilation of graphs that show interesting trends that <i>might</i> d
 
 
 <h3> Moore's law </h3>
+
+<div class = "img_blog">
 <img src="/img/graphs/image3.png" >
+</div>
 From: <a href="https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.323.9505&rep=rep1&type=pdf">Implications of Historical Trends in the Electrical Efficiency of
 Computing</a>
+
 
 </body>
 </html>
