--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -43,9 +43,9 @@
 </div>
 
 <h2>Graphs of cool long term trends</h2>
-
+<p class ="blog">
 This is a compilation of graphs that show interesting trends that <i>might</i> drive change in the future. Some of these trends have already borne fruit while others are much more probabilistic.
-
+</p>
 
 <h3> Moore's law </h3>
 
