--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -56,5 +56,15 @@ From: <a href="https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.323.950
 Computing</a>
 
 
+<h3> Scaling laws in machine learning (NLP) </h3>
+
+<div class = "img_blog">
+<img src="/img/graphs/scaling_law.png" >
+</div>
+From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Language Models
+</a> via <a href="https://www.gwern.net/Scaling-hypothesis">Gwern</a> 
+
+
+
 </body>
 </html>
