--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -58,8 +58,8 @@ Computing</a>
 
 <h3> Scaling laws in machine learning (NLP) </h3>
 
-<div id="div1" style="display:inline-block;vertical-align:middle;height:10%;">
-<img style="height:10%" src="/img/graphs/scaling_law.png" >
+<div id="div1" style="height:10%;">
+<img src="/img/graphs/scaling_law.png" >
 </div>
 From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Language Models
 </a> via <a href="https://www.gwern.net/Scaling-hypothesis">Gwern</a> 
