--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -58,7 +58,7 @@ Computing</a>
 
 <h3> Scaling laws in machine learning (NLP) </h3>
 
-<div id="div1" style="height:10%;">
+<div style="height:10%;">
 <img src="/img/graphs/scaling_law.png" >
 </div>
 From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Language Models
