--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -58,7 +58,7 @@ Computing</a>
 
 <h3> Scaling laws in machine learning (NLP) </h3>
 
-<div class="img_blog">
+<div class="div.img_blog">
 <img src="/img/graphs/scaling_law.png" height="50" >
 </div>
 From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Language Models
