--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -58,8 +58,8 @@ Computing</a>
 
 <h3> Scaling laws in machine learning (NLP) </h3>
 
-<div class="div.img_blog">
-<img src="/img/graphs/scaling_law.png" height="50" >
+<div >
+<img src="/img/graphs/scaling_law.png" height="250" >
 </div>
 From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Language Models
 </a> via <a href="https://www.gwern.net/Scaling-hypothesis">Gwern</a> 
