--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -65,6 +65,15 @@ From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Languag
 </a> via <a href="https://www.gwern.net/Scaling-hypothesis">Gwern</a> 
 
 
+<h3> Amount of energy coming from nuclear powerplants </h3>
+
+<div >
+<img src="/img/graphs/nuclear.png" height="250" >
+</div>
+From: <a href="https://world-nuclear.org/information-library/current-and-future-generation/nuclear-power-in-the-world-today.aspx">World Nuclear Association</a>
+
+
+
 
 </body>
 </html>
