--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -73,6 +73,15 @@ From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Languag
 From: <a href="https://world-nuclear.org/information-library/current-and-future-generation/nuclear-power-in-the-world-today.aspx">World Nuclear Association</a>
 
 
+<h3> Li-ion battery prices dropping </h3>
+
+<div >
+<img src="/img/graphs/image2.jpg" height="250" >
+</div>
+From: <a href="https://about.bnef.com/blog/behind-scenes-take-lithium-ion-battery-prices/">Bloomberg NEF</a>
+
+
+
 
 
 </body>
