--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -65,7 +65,7 @@ From: <a href="https://arxiv.org/abs/2001.08361">Scaling Laws for Neural Languag
 </a> via <a href="https://www.gwern.net/Scaling-hypothesis">Gwern</a> 
 
 
-<h3> Amount of energy coming from nuclear powerplants </h3>
+<h3> Amount of energy produced by nuclear powerplants </h3>
 
 <div >
 <img src="/img/graphs/nuclear.png" height="250" >
@@ -80,6 +80,19 @@ From: <a href="https://world-nuclear.org/information-library/current-and-future-
 </div>
 From: <a href="https://about.bnef.com/blog/behind-scenes-take-lithium-ion-battery-prices/">Bloomberg NEF</a>
 
+<h3> Solar module prices decreasing</h3>
+
+<div >
+<img src="/img/graphs/solar_module.png" height="250" >
+</div>
+From: <a href="https://ourworldindata.org/grapher/solar-pv-prices?yScale=log">Our World in Data</a>
+
+<h3> Research grade solar module efficiency increasing</h3>
+
+<div >
+<img src="/img/graphs/image10.png" height="250" >
+</div>
+From: <a href="https://www.nrel.gov/pv/cell-efficiency.html">NREL</a>
 
 
 
