--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -94,6 +94,16 @@ From: <a href="https://ourworldindata.org/grapher/solar-pv-prices?yScale=log">Ou
 </div>
 From: <a href="https://www.nrel.gov/pv/cell-efficiency.html">NREL</a>
 
+<h3> Number of neurons that can be recorded from</h3>
+
+<p>Doubling time looks to be on the rise from 6 years to 3-4 years</p>
+
+<div >
+<img src="/img/graphs/image21.jpg" height="250" >
+</div>
+From: <a href="https://mobile.twitter.com/JacquesCarolan/status/1386748831426097152">Jacques Carolan</a>
+
+
 
 
 
