--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -133,7 +133,7 @@ From: <a href="https://twitter.com/erlichya/status/1439957363788853249
 </div>
 From: <a href="https://ourworldindata.org/fertility-rate">Our World in Data</a>
 
-<h3> Keck's law of fiber optic connectivity trand </h3>
+<h3> Keck's law of fiber optic connectivity</h3>
 
 <div >
 <img src="/img/graphs/kecks_law.png" height="250" >
