--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<script src="dark.js"></script>
 
-<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve.
-There is one easter egg, however not on this page. -->
+<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve it.
+There is one easter egg, however not on this page. Also you should def email me at ago@agolajko.com-->
 </head>
 
 <body>
@@ -47,18 +47,13 @@ There is one easter egg, however not on this page. -->
 </div>
 <br/>
 <div>
-<p>I am completing my masters in ML and Computational Neuroscience at <a href="https://ucl.ac.uk">UCL</a>.
-	<br/>
-	My advisor is <a href="https://www.gatsby.ucl.ac.uk/~pel/"> Peter Latham </a> and I am working on stochastic neural nets.
-</p>
+<p></p>
 
-
-<a href="https://www.linkedin.com/in/ago-lajko/"> LinkedIn </a>
 
 <br/>
-
+Contact me on:
 <a href="https://www.twitter.com/agolajko"> Twitter</a>
-
+Or via email at: <a href="mailto:ago@agolajko.com">ago@agolajko.com</a>
 <br/>
 
 My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
