--- a/cool_graphs.html
+++ b/cool_graphs.html
@@ -44,7 +44,7 @@
 
 <h2>Graphs of cool long term trends</h2>
 <p class ="blog">
-This is a compilation of graphs that show interesting trends that <i>might</i> drive change in the future. Some of these trends have already borne fruit while others are much more probabilistic.
+This is a compilation of graphs that show interesting trends that <i>might</i> drive change in the future. Some of these trends have already borne fruit while others are much more probabilistic. I am sure there are many interesting things I missed out that you are aware of. Email me at <a href="mailto:ago@agolajko.com">ago@agolajko.com</a> or on <a href="https://twitter.com/agolajko">Twitter</a>
 </p>
 
 <h3> Moore's law </h3>
