--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
 </div>
 
 
-Hi there! This is my blog, so I might write here. Until then here is a test:
+Hi there! This is my blog
 <br/>
 <br>
 <div>
-<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
+	<a href=cool_graphs.html>Graphs of cool long term trends</a>
 <br>
-<a href="latex_test.html"> How do I Latex within HTML?</a>
+	<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
+<br>
+	<a href="latex_test.html"> How do I Latex within HTML?</a>
 </div>
 
 </body>
