removed extra blockquote

--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -53,7 +53,7 @@
 <p class="blog"><strong>1. Make incremental advances.</strong> Grand visions inflated the bubble, so they should not be indulged. Anyone who claims to be able to do something great is suspect, and anyone who wants to change the world should be more humble. Small, incremental steps are the only safe path forward.</p>
 <p class="blog"><strong>2. Stay lean and flexible.</strong> All companies must be “lean,” which is code for “unplanned.” You should not know what your business will do; planning is arrogant and inflexible. Instead you should try things out, “iterate,” and treat entrepreneurship as agnostic experimentation.</p>
 <p class="blog"><strong>3. Improve on the competition.</strong> Don’t try to create a new market prematurely. The only way to know you have a real business is to start with an already existing customer, so you should build your company by improving on recognizable products already offered by successful competitors.</p>
-<p class="blog"><strong>4. Focus on product, not sales.</strong> If your product requires advertising or salespeople to sell it, it’s not good enough: technology is primarily about product development, not distribution. Bubble-era advertising was obviously wasteful, so the only sustainable growth is viral growth.</p></blockquote>
+<p class="blog"><strong>4. Focus on product, not sales.</strong> If your product requires advertising or salespeople to sell it, it’s not good enough: technology is primarily about product development, not distribution. Bubble-era advertising was obviously wasteful, so the only sustainable growth is viral growth.</p>
 
 <p class="blog">And yet the opposite principles are probably more correct:</p>
 
